added and refined some more features related to participants